Refactor Warp Api.